fix horizontal scrollbar issue

--- a/cra-threejs/src/App.css
+++ b/cra-threejs/src/App.css
@@ -112,7 +112,6 @@ body {
 /* Home section */
 
 .home {
-  width: 100vw;
   height: 100vh;
   background-position: center top;
   background-size: cover;
