--- a/cra-threejs/src/components/home/Type.css
+++ b/cra-threejs/src/components/home/Type.css
@@ -20,10 +20,11 @@
     .Typewriter__wrapper {
         font-size: 1.4em !important;
         font-weight: 500 !important;
-        position: absolute !important;
+        position: relative !important;
     }
 
     .Typewriter__cursor {
         display: none !important;
+        position: relative !important;
     }
 }
